# ebpf-flamegraph-profiler

./: .gitignore  Cargo.toml  README.md
examples/: cpu_bound.c
profiler/: Cargo.toml  build.rs
profiler-bpf/: bpf_helpers.h  profiler.bpf.c
profiler-bpf/include/: profiler.h
profiler-common/: Cargo.toml  build.rs
profiler-common/src/: lib.rs
profiler/src/: cli.rs  folded.rs  kallsyms.rs  lib.rs  main.rs  maps.rs  perf.rs  svg.rs  symbolize.rs  usersym.rs
profiler/tests/: integration.rs
profiler/tests/fixtures/: fixture.c
tools/: gen-vmlinux.sh
