[workspace]
resolver = "2"
members = ["profiler-common", "profiler"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
aya = "0.14"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
object = { version = "0.39", default-features = false, features = ["read", "elf", "std"] }
bindgen = "0.72"
