[package]
name = "profiler-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]

# aya only builds on Linux (it calls Linux-only libc syscalls
# unconditionally); keep it off the dependency graph entirely on other
# hosts so `cargo build`/`check`/`test` still work on macOS for everything
# that doesn't need it.
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
