[package]
name = "profiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "flamegraph-profiler"
path = "src/main.rs"

[dependencies]
profiler-common = { path = "../profiler-common" }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
object = { workspace = true }

# aya only builds on Linux (it calls Linux-only libc syscalls
# unconditionally); keep it off the dependency graph entirely on other
# hosts so `cargo build`/`check`/`test` still work on macOS for the
# pure-logic modules (kallsyms/usersym/folded/svg/cli).
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }

[dev-dependencies]
roxmltree = "0.21"

[build-dependencies]
anyhow = { workspace = true }
